<resources>
    <string name="item1">Kapot</string>
    <string name="item2">Verlichting</string>
    <string name="item3">Bestrating</string>
    <string name="item4">Groen</string>
    <string name="item5">Smerig</string>
    <string name="item6">Overlast</string>
    <string name="item7">Overig</string>
    <string name="item8">Uitleg</string>
    <string name="iets_gezien_meld_het_nu">Iets gezien? Meld het nu!</string>
    <string name="app_name">Meld Het</string>
    <string name="fotoinstructie">Maak een duidelijke foto van de situatie</string>
    <string name="channel_name">meldhet</string>
    <string name="channel_description">Melding van de gemeente over jouw lopende zaken</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="item9">Chatten</string>
    <string name="reply_label">Beantwoorden</string>
    <string name="replied">Bedankt, uw reactie is verstuurd</string>
    <string name="issueloader">Een ogenblikje geduld alstublieft, wij halen nu uw meldingen op</string>
    <string name="issueid">ISSUEID</string>
    <string name="apiurl">api_url</string>
    <string name="get">get?id=</string>
    <string name="missue">issue</string>
    <string name="msender">sender</string>
    <string name="mbody">body</string>
    <string name="mid">id</string>
    <string name="reply">Beantwoorden...</string>
    <string name="newmessagefrom">Nieuw bericht van</string>
    <string name="firebase">fb</string>
    <string name="messageSend">Uw bericht is verstuurd</string>
    <string name="messageurl">messages_url</string>
    <string name="create">create/</string>
    <string name="mrecipient">recipient</string>
    <string name="failuremessage">Er is iets mis gegaan, controleer je internet verbinding en probeer het later nogmaals.</string>
    <string name="failuretitle">Oh Nee!!!</string>
    <string name="gpstitle">GPS Inschakelen?</string>
    <string name="gpsmessage">De GPS moet ingeschakeld zijn zodat we de gemeente de exacte locatie kunnen doorgeven.</string>
    <string name="enable">Inschakelen</string>
    <string name="disable">Annuleren</string>
    <string name="nogps">Helaas kunnen we geen meldingen maken zonder GPS. Probeer het later nogmaals</string>
    <string name="bericht">Bericht......</string>
    <string name="versturen">Versturen</string>
    <string name="Intro2">Vuil of Kapot</string>
    <string name="Intro2Subtext">Elke dag loop jij langs honderden, misschien wel duizenden dingen die kapot, vies, onduidelijk of gewoon verkeerd zijn.</string>
    <string name="Intro1">Welkom</string>
    <string name="Intro1SubText">Leuk dat je onze app gebruikt om de wereld groener te maken</string>
    <string name="Intro3">Doe er wat aan</string>
    <string name="Intro3SubText">Met deze app. Hiermee maak je namelijk eenvoudig een melding van die losse stoeptegel waar je steeds over struikelt. Wij sturen hem door naar de gemeente en die zorgt voor de rest.</string>
    <string name="Intro4">Klik en "Klik"</string>
    <string name="Intro4SubText">Hoe? Heel simpel. Klik op een categorie en maak daarna een foto. Wij regelen de rest. Dus voorkom frustraties en formulieren en MeldHet!</string>
    <string name="firstrun">firstrun</string>
    <string name="popup_describe">Wat voor probleem wil je melden</string>
    <string name="notify">Melden</string>
    <string name="cancel">Annuleren</string>
    <string name="issuetyoe">issueType</string>
    <string name="filepath">filepath</string>
    <string name="data">data</string>
    <string name="file">file</string>
    <string name="filePreFix">MeldingOp</string>
    <string name="close">Sluiten</string>
    <string name="notprocessed">Deze zaak is nog niet inbehandeling genomen door de gemeente</string>
    <string name="retry">Opnieuw Proberen</string>
    <string name="permissionExplanation">We gebruiken camera voor de foto\'s, locatie voor de plek, en storage om de foto op te slaan mocht er iets mis gaan.</string>
    <string name="PermissionExplanation2">Zonder deze functionaliteiten werkt de app helaas niet.</string>
    <string name="noGPS">Helaas kon uw locatie niet worden bepaald. Probeer het later nogmaals.</string>
</resources>
