<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_pipes"
        android:shortcutId="static"
        android:shortcutShortLabel="@string/item1">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.cheesycode.meldhet.MainActivity"
            android:targetPackage="com.cheesycode.meldhet"
            android:data="@string/item1"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_wb_incandescent_24px"
        android:shortcutId="static2"
        android:shortcutShortLabel="@string/item2">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.cheesycode.meldhet.MainActivity"
            android:targetPackage="com.cheesycode.meldhet"
            android:data="@string/item2"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_city_avenue_perspective"
        android:shortcutId="static3"
        android:shortcutShortLabel="@string/item3">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.cheesycode.meldhet.MainActivity"
            android:targetPackage="com.cheesycode.meldhet"
            android:data="@string/item3"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_nature_people_24px"
        android:shortcutId="static4"
        android:shortcutShortLabel="@string/item4">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.cheesycode.meldhet.MainActivity"
            android:targetPackage="com.cheesycode.meldhet"
            android:data="@string/item4"/>
    </shortcut>
</shortcuts>