<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context="com.cheesycode.meldhet.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/titleimage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitXY"

            android:src="@drawable/banner"
            app:layout_constraintBottom_toTopOf="@id/titletext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titletext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/titleBackground"
            android:fontFamily="casual"
            android:gravity="bottom"
            android:text="@string/iets_gezien_meld_het_nu"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <ImageView
            android:id="@+id/image1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorGrapeFruit"
            android:clickable="true"
            android:contentDescription="@string/item1"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"
            android:padding="15dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:srcCompat="@drawable/ic_pipes" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/colorGrapeFruitDark"
            android:clickable="true"
            android:onClick="onImageOrTextClick"
            android:padding="8dp"
            android:text="@string/item1"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/image1"
            app:layout_constraintRight_toRightOf="@id/image1"
            app:layout_constraintTop_toBottomOf="@id/image1" />


        <ImageView
            android:id="@+id/image2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorBitterSweet"
            android:clickable="true"
            android:contentDescription="@string/item2"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintRight_toLeftOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:srcCompat="@drawable/ic_baseline_wb_incandescent_24px" />

            <TextView
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@id/image2"
                app:layout_constraintLeft_toLeftOf="@id/image2"
                app:layout_constraintRight_toRightOf="@id/image2"
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorBitterSweetDark"
                android:padding="8dp"
                android:text="@string/item2"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:clickable="true"
                android:onClick="onImageOrTextClick"/>


        <ImageView
            android:id="@+id/image3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:background="@color/colorFlower"
            android:clickable="true"
            android:contentDescription="@string/item3"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"
            android:padding="15dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/guideline4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:srcCompat="@drawable/ic_city_avenue_perspective" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/colorFlowerDark"
            android:clickable="true"
            android:onClick="onImageOrTextClick"
            android:padding="8dp"
            android:text="@string/item3"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/image3"
            app:layout_constraintRight_toRightOf="@id/image3"
            app:layout_constraintTop_toBottomOf="@id/image3" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorGrass"
            android:clickable="true"
            android:contentDescription="@string/item4"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"
            android:padding="15dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/t1"
            app:srcCompat="@drawable/ic_baseline_nature_people_24px" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/colorGrassDark"
            android:clickable="true"
            android:onClick="onImageOrTextClick"
            android:padding="8dp"
            android:text="@string/item4"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/image4"
            app:layout_constraintRight_toRightOf="@id/image4"
            app:layout_constraintTop_toBottomOf="@id/image4" />


        <ImageView
            android:id="@+id/image5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorMint"
            android:clickable="true"
            android:contentDescription="@string/item5"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"
            android:padding="15dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintRight_toLeftOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:srcCompat="@drawable/ic_dog_poo" />

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/tv5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorMintDark"
        android:padding="8dp"
        android:text="@string/item5"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/image5"
        app:layout_constraintRight_toRightOf="@id/image5"
        app:layout_constraintTop_toBottomOf="@id/image5"
        android:clickable="true"
        android:onClick="onImageOrTextClick"/>


        <ImageView
            android:id="@+id/image6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:background="@color/colorAqua"
            android:clickable="true"
            android:contentDescription="@string/item6"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/guideline4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t3"
            app:srcCompat="@drawable/ic_baseline_record_voice_over_24px" />

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/tv6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAquaDark"
        android:padding="8dp"
        android:text="@string/item6"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/image6"
        app:layout_constraintRight_toRightOf="@id/image6"
        app:layout_constraintTop_toBottomOf="@id/image6"
        android:clickable="true"
        android:onClick="onImageOrTextClick"/>

        <ImageView
            android:id="@+id/image7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorBlueJeans"
            android:clickable="true"
            android:contentDescription="@string/item7"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/t4"
            app:srcCompat="@drawable/ic_baseline_add_24px" />

    <TextView
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/image7"
        app:layout_constraintLeft_toLeftOf="@id/image7"
        app:layout_constraintRight_toRightOf="@id/image7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueJeansDark"
        android:padding="8dp"
        android:text="@string/item7"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="onImageOrTextClick"/>


        <ImageView
            android:id="@+id/image8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorPinkRose"
            android:clickable="true"
            android:contentDescription="@string/item8"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"

            android:padding="20dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/tv5"
            app:srcCompat="@drawable/ic_baseline_info_24px" />

    <TextView
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/image8"
        app:layout_constraintLeft_toLeftOf="@id/image8"
        app:layout_constraintRight_toRightOf="@id/image8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPinkRoseDark"
        android:padding="8dp"
        android:text="@string/item8"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="onImageOrTextClick"/>

        <ImageView
            android:id="@+id/image9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:background="@color/colorLavander"
            android:clickable="true"
            android:contentDescription="@string/item9"
            android:cropToPadding="true"
            android:onClick="onImageOrTextClick"

            android:padding="20dp"
            android:scaleType="fitXY"
            android:tint="@color/colorWhite"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/guideline4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv6"
            app:srcCompat="@drawable/ic_outline_forum_24px" />

        <TextView
            android:id="@+id/text9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/colorLavanderDark"
            android:clickable="true"
            android:onClick="onImageOrTextClick"
            android:padding="8dp"
            android:text="@string/item9"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/image9"
            app:layout_constraintRight_toRightOf="@id/image9"
            app:layout_constraintTop_toBottomOf="@id/image9" />





    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6611111" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>